style profile picture and link icons

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </nav>
       <section id="profile">
             <div class="section__pic-container">
-                <img src="./assets/profile-pic.png" alt="Quan Hoang profile picture">
+                <img src="./assets/profile-pic.png" alt="John Doe profile picture" />
             </div>
             <div class="section__text">
                 <p class="section__text__p1">Hello, I'm</p>
@@ -45,15 +45,26 @@
                 <p class="section__text__p2">Frontend Developer</p>
                 <div class="btn-container">
                     <button
-                      class="btn btn-color-2" onclick="window.open('./assets/resume-example.pdf')">
-            Download CV
-          </button>
-          <button class="btn btn-color-1" onclick="location.href='./#contact'">
-            Contact Info
+                    class="btn btn-color-2"
+                    onclick="window.open('./assets/resume-example.pdf')">
+                    Download CV
+                </button>
+                <button class="btn btn-color-1" onclick="location.href='./#contact'">
+                  Contact Info
             </button>
         </div>
-        <div> id="socials-container">
-            <imh src="./assets/linkedin.png" alt="My LinkedIn Profile"
+        <div id="socials-container">
+        <img 
+            src="./assets/linkedin.png"
+            alt="My LinkedIn profile"
+            class="icon" onClick="location.href='https://www.linkedin.com/in/quan-hoang-083240167/'"
+            />
+            <img 
+            src="./assets/github.png"
+            alt="My Github profile"
+            class="icon" onClick="location.href='https://github.com/qhoang2373'"
+            />
+            </div>
         </div>
       </section>
     <script src="script.js"></script>
