--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
             <div class="section__text">
                 <p class="section__text__p1">Hello, I'm</p>
                 <h1 class="title">Quan Hoang</h1>
-                <p class="section__text__p2">Frontend Developer</p>
+                <p class="section__text__p2">Full-Stack Developer</p>
                 <div class="btn-container">
                     <button
                     class="btn btn-color-2"
                     onclick="window.open('./assets/resume-example.pdf')">
-                    Download CV
+                    Download Resume
                 </button>
                 <button class="btn btn-color-1" onclick="location.href='./#contact'">
                   Contact Info
