--- a/index.html
+++ b/index.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portfolio</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
-</head>
-<body>
+  </head>
+  <body>
     <nav id="desktop-nav">
         <div class="logo">Quan Hoang</div>
         <div>
-            <ul class="nav-links">
-                <li><a href="#about">About</a></li>
-                <li><a href="#experience">Experience</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
+          <ul class="nav-links">
+            <li><a href="#about">About</a></li>
+            <li><a href="#experience">Experience</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
         </div>
-    </nav>
-    <nav id="hamburger-nav">
+      </nav>
+      <nav id="hamburger-nav">
         <div class="logo">Quan Hoang</div>
         <div class="hamburger-menu">
           <div class="hamburger-icon" onclick="toggleMenu()">
@@ -36,37 +37,91 @@
         </div>
       </nav>
       <section id="profile">
-            <div class="section__pic-container">
+        <div class="section__pic-container">
                 <img src="./assets/profile-pic.png" alt="John Doe profile picture" />
-            </div>
-            <div class="section__text">
+              </div>
+              <div class="section__text">
                 <p class="section__text__p1">Hello, I'm</p>
                 <h1 class="title">Quan Hoang</h1>
                 <p class="section__text__p2">Full-Stack Developer</p>
                 <div class="btn-container">
-                    <button
+                  <button
                     class="btn btn-color-2"
-                    onclick="window.open('./assets/resume-example.pdf')">
-                    Download Resume
-                </button>
-                <button class="btn btn-color-1" onclick="location.href='./#contact'">
-                  Contact Info
-            </button>
-        </div>
-        <div id="socials-container">
-        <img 
-            src="./assets/linkedin.png"
-            alt="My LinkedIn profile"
-            class="icon" onClick="location.href='https://www.linkedin.com/in/quan-hoang-083240167/'"
+                    onclick="window.open('./assets/resume-example.pdf')"
+                    >
+                    Download CV
+                  </button>
+                  <button class="btn btn-color-1" onclick="location.href='./#contact'">
+                    Contact Info
+                  </button>
+                </div>
+                <div id="socials-container">
+          <img
+              src="./assets/linkedin.png"
+              alt="My LinkedIn profile"
+              class="icon" 
+              onClick="location.href='https://www.linkedin.com/in/quan-hoang-083240167/'"
             />
-            <img 
-            src="./assets/github.png"
-            alt="My Github profile"
-            class="icon" onClick="location.href='https://github.com/qhoang2373'"
+            <img
+              src="./assets/github.png"
+              alt="My Github profile"
+              class="icon" 
+              onClick="location.href='https://github.com/qhoang2373'"
             />
-            </div>
+          </div>
         </div>
       </section>
+      <section id="about">
+        <p class="section__text__p1">Get To Know More</p>
+        <h1 class="title">About Me</h1>
+        <div class="section-container">
+          <div class="section__pic-container">
+            <img
+              src="./assets/about-pic.png"
+              alt="Profile picture"
+              class="about-pic"
+            />
+          </div>
+          <div class="about-details-container">
+            <div class="about-containers">
+              <div class="details-container">
+                <img
+                  src="./assets/experience.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <h3>Experience</h3>
+                <p>General Assembly <br />Software Engineering Bootcamp</p>
+              </div>
+              <div class="details-container">
+                <img
+                  src="./assets/education.png"
+                  alt="Education icon"
+                  class="icon"
+                />
+                <h3>Education</h3>
+                <p>B.S. Psychology</p>
+              </div>
+            </div>
+            <div class="text-container">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quis
+                reprehenderit et laborum, rem, dolore eum quod voluptate
+                exercitationem nobis, nihil esse debitis maxime facere minus sint
+                delectus velit in eos quo officiis explicabo deleniti dignissimos.
+                Eligendi illum libero dolorum cum laboriosam corrupti quidem,
+                reiciendis ea magnam? Nulla, impedit fuga!
+              </p>
+            </div>
+          </div>
+        </div>
+        <img
+          src="./assets/arrow.png"
+          alt="Arrow icon"
+          class="icon arrow"
+          onclick="location.href='./#experience'"
+        />
+       </section>
     <script src="script.js"></script>
 </body>
 </html>
