--- a/index.html
+++ b/index.html
@@ -122,6 +122,85 @@
           onclick="location.href='./#experience'"
         />
        </section>
+       <section id="experience">
+          <p class="section__text__p1">Explore My</p>
+          <h1 class="title">Experience</h1>
+          <div class="experience-details-container">
+              <div class="about-containers">
+                <div class="'details-containers">
+                  <h2 class="experience-sub-title">Full-Stack Developer</h2>
+                  <div class="article-container">
+                    <article>
+                      <img
+                        src="./assets/checkmark.png"
+                        alt="Experience icon"
+                        class="icon"
+                      />
+                      <div>
+                          <h3>Javascript</h3>
+                          <p>Experienced</p>
+                      </div>
+                    </article>
+                    <article>
+                      <img
+                        src="./assets/checkmark.png"
+                        alt="Experience icon"
+                        class="icon"
+                      />
+                      <div>
+                          <h3>HTML</h3>
+                          <p>Basic</p>
+                      </div>
+                    </article>
+                    <article>
+                      <img
+                        src="./assets/checkmark.png"
+                        alt="Experience icon"
+                        class="icon"
+                      />
+                      <div>
+                          <h3>CSS</h3>
+                          <p>Basic</p>
+                      </div>
+                    </article>
+                    <article>
+                      <img
+                        src="./assets/checkmark.png"
+                        alt="Experience icon"
+                        class="icon"
+                      />
+                      <div>
+                          <h3>Python</h3>
+                          <p>Basic</p>
+                      </div>
+                    </article>
+                    <article>
+                      <img
+                        src="./assets/checkmark.png"
+                        alt="Experience icon"
+                        class="icon"
+                      />
+                      <div>
+                          <h3>React</h3>
+                          <p>Basic</p>
+                      </div>
+                    </article>
+                    <article>
+                      <img
+                        src="./assets/checkmark.png"
+                        alt="Experience icon"
+                        class="icon"
+                      />
+                      <div>
+                          <h3>Django</h3>
+                          <p>Basic</p>
+                      </div>
+                    </article>
+                </div>
+              </div>
+            </div>
+          </div>
+       </section>
     <script src="script.js"></script>
 </body>
 </html>
