--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                       />
                       <div>
                           <h3>Javascript</h3>
-                          <p>Experienced</p>
+                          <p>Basic</p>
                       </div>
                     </article>
                     <article>
@@ -149,7 +149,7 @@
                       />
                       <div>
                           <h3>HTML</h3>
-                          <p>Basic</p>
+                          <p>Intermediate</p>
                       </div>
                     </article>
                     <article>
@@ -160,7 +160,7 @@
                       />
                       <div>
                           <h3>CSS</h3>
-                          <p>Basic</p>
+                          <p>Intermediate</p>
                       </div>
                     </article>
                     <article>
@@ -171,6 +171,22 @@
                       />
                       <div>
                           <h3>Python</h3>
+                          <p>Basic</p>
+                      </div>
+                    </article>
+                </div>
+              </div>
+                <div class="'details-containers">
+                  <h2 class="experience-sub-title">Full-Stack Developer</h2>
+                  <div class="article-container">
+                    <article>
+                      <img
+                        src="./assets/checkmark.png"
+                        alt="Experience icon"
+                        class="icon"
+                      />
+                      <div>
+                          <h3>Express</h3>
                           <p>Basic</p>
                       </div>
                     </article>
@@ -194,6 +210,28 @@
                       <div>
                           <h3>Django</h3>
                           <p>Basic</p>
+                      </div>
+                    </article>
+                    <article>
+                      <img
+                        src="./assets/checkmark.png"
+                        alt="Experience icon"
+                        class="icon"
+                      />
+                      <div>
+                          <h3>Flask</h3>
+                          <p>Basic</p>
+                      </div>
+                    </article>
+                    <article>
+                      <img
+                        src="./assets/checkmark.png"
+                        alt="Experience icon"
+                        class="icon"
+                      />
+                      <div>
+                          <h3>Git</h3>
+                          <p>Intermediate</p>
                       </div>
                     </article>
                 </div>
