--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
           <div class="experience-details-container">
               <div class="about-containers">
                 <div class="'details-containers">
-                  <h2 class="experience-sub-title">Full-Stack Developer</h2>
+                  <h2 class="experience-sub-title">Full-Stack Development</h2>
                   <div class="article-container">
                     <article>
                       <img
@@ -177,7 +177,7 @@
                 </div>
               </div>
                 <div class="'details-containers">
-                  <h2 class="experience-sub-title">Full-Stack Developer</h2>
+                  <h2 class="experience-sub-title">Full-Stack Development</h2>
                   <div class="article-container">
                     <article>
                       <img
@@ -238,6 +238,12 @@
               </div>
             </div>
           </div>
+                  <img
+          src="./assets/arrow.png"
+          alt="Arrow icon"
+          class="icon arrow"
+          onclick="location.href='./#projects'"
+        />
        </section>
     <script src="script.js"></script>
 </body>
