--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           <h1 class="title">Experience</h1>
           <div class="experience-details-container">
               <div class="about-containers">
-                <div class="'details-containers">
+                <div class="details-container">
                   <h2 class="experience-sub-title">Full-Stack Development</h2>
                   <div class="article-container">
                     <article>
@@ -176,7 +176,7 @@
                     </article>
                 </div>
               </div>
-                <div class="'details-containers">
+                <div class="details-container">
                   <h2 class="experience-sub-title">Full-Stack Development</h2>
                   <div class="article-container">
                     <article>
