add project 1 github and repo links

--- a/index.html
+++ b/index.html
@@ -245,6 +245,30 @@
           onclick="location.href='./#projects'"
         />
        </section>
+       <section id="projects">
+            <p class="section__text__p1">Browst My Recent</p>
+            <h1 class="title">Projects</h1>
+            <div class="experience-details-container">
+                <div class="details-container color-container">
+                  <div class="article-container">
+                    <img
+                    src="./assets/project-1.png"
+                    alt="Project 1"
+                    class="project-img"
+                  />
+                  </div>
+                  <h2 class="experience-sub-title project-title">AlbumTrackr</h2>
+                  <div class="btn-container">
+                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/qhoang2373/album-trackr'">
+                      Github Repo
+                  </button>
+                  <button class="btn btn-color-2 project-btn" onclick="location.href='https://albumtrackr-e2ec521872e4.herokuapp.com/'">
+                    Live Project
+                </button>
+                  </div>
+                </div>
+            </div>
+          </section>
     <script src="script.js"></script>
 </body>
 </html>
