--- a/index.html
+++ b/index.html
@@ -267,6 +267,48 @@
                 </button>
                   </div>
                 </div>
+                <div class="details-container color-container">
+                  <div class="article-container">
+                    <img
+                    src="./assets/project-2.png"
+                    alt="Project 1"
+                    class="project-img"
+                  />
+                  </div>
+                  <h2 class="experience-sub-title project-title">Sneaker-Vault</h2>
+                  <div class="btn-container">
+                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/qhoang2373/sneaker-vault-front-end'">
+                      Github Repo Front End
+                  </button>
+                  <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/qhoang2373/sneaker-vault-backend'">
+                    Github Repo Back End
+                </button>
+                  <button class="btn btn-color-2 project-btn" onclick="location.href='https://sneaker-vault.netlify.app/'">
+                    Live Project
+                </button>
+                  </div>
+                </div>
+                <div class="details-container color-container">
+                  <div class="article-container">
+                    <img
+                    src="./assets/project-3.png"
+                    alt="Project 1"
+                    class="project-img"
+                  />
+                  </div>
+                  <h2 class="experience-sub-title project-title">Game of Thrones Quiz</h2>
+                  <div class="btn-container">
+                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/qhoang2373/Game-Of-Thrones-Quiz">
+                      Github Repo
+                  </button>
+                  <button class="btn btn-color-2 project-btn" onclick="location.href='https://qhoang2373.github.io/Game-Of-Thrones-Quiz/'">
+                    Live Project
+                </button>
+                  </div>
+                </div>
+                  </div>
+                  </div>
+                </div>
             </div>
           </section>
     <script src="script.js"></script>
