--- a/index.html
+++ b/index.html
@@ -306,10 +306,14 @@
                 </button>
                   </div>
                 </div>
-                  </div>
-                  </div>
-                </div>
+              </div>
             </div>
+            <img
+            src="./assets/arrow.png"
+            alt="Arrow icon"
+            class="icon arrow"
+            onclick="location.href='./#projects'"
+          />
           </section>
     <script src="script.js"></script>
 </body>
