add index.html for contact linkedin and email

--- a/index.html
+++ b/index.html
@@ -249,6 +249,7 @@
             <p class="section__text__p1">Browst My Recent</p>
             <h1 class="title">Projects</h1>
             <div class="experience-details-container">
+                <div class="about-containers">
                 <div class="details-container color-container">
                   <div class="article-container">
                     <img
@@ -289,6 +290,7 @@
                   </div>
                 </div>
                 <div class="details-container color-container">
+                <div></div>
                   <div class="article-container">
                     <img
                     src="./assets/project-3.png"
@@ -314,6 +316,29 @@
             class="icon arrow"
             onclick="location.href='./#projects'"
           />
+          </section>
+          <section id="contact">
+                <p class="section__text__p1">Get in Touch</p>
+                <h1 class="title">Contact Me</h1>
+                <div class="contact-info-upper-container">
+                  <div class="contact-info-container">
+                    <img
+                    src="./assets/email.png"
+                    alt="Email icon"
+                    class="icon contact-icon email-icon"
+                  />
+                  <p><a href="mailto:examplemail@gmail.com">Qhoang2373@gmail.com</a>
+                  </p>
+                  </div>
+                  <div class="contact-info-container">
+                    <img
+                    src="./assets/linkedin.png"
+                    alt="Linkedin icon"
+                    class="icon contact-icon email-icon"
+                  />
+                  <p><a href="https://www.linkedin.com/in/quan-hoang-083240167/">LinkedIn</a></p>
+                  </p>
+                  </div>
           </section>
     <script src="script.js"></script>
 </body>
