--- a/index.html
+++ b/index.html
@@ -340,7 +340,20 @@
                   </p>
                   </div>
           </section>
-          
+          <footer>
+            <nav>
+              <div class="nav-links-container">
+                <ul class="nav-links">
+                  <li><a href="#about">About</a></li>
+                  <li><a href="#experience">Experience</a></li>
+                  <li><a href="#projects">Projects</a></li>
+                  <li><a href="#contact">Contact</a></li>
+                </ul>
+              </div>
+            </nav>
+            <p>Copyright &#169; 2023 Quan Hoang. All Rights Reserved.</p>
+          </footer>
+          <script src="script.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
