--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
                 <div class="btn-container">
                   <button
                     class="btn btn-color-2"
-                    onclick="window.open('./assets/resume-example.pdf')"
+                    onclick="window.open('./assets/resume.pdf')"
                     >
-                    Download CV
+                    Download Resume
                   </button>
                   <button class="btn btn-color-1" onclick="location.href='./#contact'">
                     Contact Info
@@ -105,12 +105,13 @@
             </div>
             <div class="text-container">
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quis
-                reprehenderit et laborum, rem, dolore eum quod voluptate
-                exercitationem nobis, nihil esse debitis maxime facere minus sint
-                delectus velit in eos quo officiis explicabo deleniti dignissimos.
-                Eligendi illum libero dolorum cum laboriosam corrupti quidem,
-                reiciendis ea magnam? Nulla, impedit fuga!
+                Hello! I'm Quan, a Software Engineer based in Orange County California. In 2024, I decided to make a 
+                careeer switch and pursue software engineering at General Assembly. I learned a Full-stack curriculum
+                and computer science fundamentals during an 8-month coding bootcamp. As I transition into this new 
+                career, I am very eager to learn new technologies and work on a team where the work I am doing
+                is meaninging and impactful. I enjoy building relationships with team members, collaborating
+                cross-functionality, and overall bringing a positive attitude to the team. I am very 
+                excited for my future in tech! tester tester
               </p>
             </div>
           </div>
