--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 career, I am very eager to learn new technologies and work on a team where the work I am doing
                 is meaninging and impactful. I enjoy building relationships with team members, collaborating
                 cross-functionality, and overall bringing a positive attitude to the team. I am very 
-                excited for my future in tech! tester tester
+                excited for my future in tech! tester tester tester
               </p>
             </div>
           </div>
