--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </nav>
       <section id="profile">
         <div class="section__pic-container">
-                <img src="./assets/profile-pic.png" alt="John Doe profile picture" />
+                <img src="./assets/profile-pic.png" alt="Quan Hoang profile picture" />
               </div>
               <div class="section__text">
                 <p class="section__text__p1">Hello, I'm</p>
@@ -247,7 +247,7 @@
         />
        </section>
        <section id="projects">
-            <p class="section__text__p1">Browst My Recent</p>
+            <p class="section__text__p1">Browse My Recent</p>
             <h1 class="title">Projects</h1>
             <div class="experience-details-container">
                 <div class="about-containers">
@@ -277,7 +277,7 @@
                     class="project-img"
                   />
                   </div>
-                  <h2 class="experience-sub-title project-title">Sneaker-Vault</h2>
+                  <h2 class="experience-sub-title project-title">Sneaker Vault</h2>
                   <div class="btn-container">
                     <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/qhoang2373/sneaker-vault-front-end'">
                       Github Repo Front End
