update about me section

--- a/index.html
+++ b/index.html
@@ -105,12 +105,11 @@
             </div>
             <div class="text-container">
               <p>
-                Hello! I'm Quan, a Software Engineer based in Orange County California. In 2024, I decided to make a 
-                careeer switch and pursue software engineering at General Assembly. I learned a Full-stack curriculum
-                and computer science fundamentals during an 8-month coding bootcamp. As I transition into this new 
-                career, I am very eager to learn new technologies and work on a team where the work I am doing
-                is meaninging and impactful. I enjoy building relationships with team members, collaborating
-                cross-functionality, and overall bringing a positive attitude to the team. I am very 
+                Hello! I'm Quan, a Software Engineer based in Orange County California. In 2024, I pivoted my career towards 
+                software development and pursued software engineering at General Assembly. I learned a Full-stack curriculum
+                and computer science fundamentals during an 8-month coding bootcamp. As I progress in this field, I'm passionate 
+                about embracing new technologies and contributing to teams that perform meaningful work I enjoy building relationships 
+                with team members, collaborating cross-functionality, and bringing a positive attitude to the team. I am very 
                 excited for my future in tech! 
               </p>
             </div>
