--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                   </div>
                   <h2 class="experience-sub-title project-title">Game of Thrones Quiz</h2>
                   <div class="btn-container">
-                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/qhoang2373/Game-Of-Thrones-Quiz">
+                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/qhoang2373/Game-Of-Thrones-Quiz'">
                       Github Repo
                   </button>
                   <button class="btn btn-color-2 project-btn" onclick="location.href='https://qhoang2373.github.io/Game-Of-Thrones-Quiz/'">
